--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                             <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                         </button>
                          <div class="text-right px-2">
-                             <p id="user-email-display" class="text-sm font-medium text-gray-700 dark:text-gray-300 truncate max-w-[150px]"></p>
-                         </div>
+                            <p id="user-email-display" class="text-sm font-medium text-gray-700 dark:text-gray-300 truncate max-w-[150px]"></p>
+                        </div>
                          <button id="logout-btn" class="p-2 rounded-full text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-red-500 dark:hover:text-red-400 focus:outline-none" title="Log Out">
                              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                  <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
@@ -122,7 +122,7 @@
                                     <label for="question-topic" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Topic</label>
                                     <input type="text" id="question-topic" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" placeholder="e.g., Arrays" required>
                                 </div>
-                                 <div>
+                                <div>
                                     <label for="question-difficulty" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Difficulty</label>
                                     <select id="question-difficulty" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm dark:bg-gray-700 dark:border-gray-600 dark:text-white">
                                         <option>Easy</option>
@@ -137,8 +137,8 @@
                                 <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Enter comma-separated numbers for custom intervals.</p>
                             </div>
                             <button type="submit" class="w-full bg-indigo-600 text-white font-semibold py-3 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150 ease-in-out flex items-center justify-center gap-2">
-                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" /></svg>
-                                 Add to Calendar
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" /></svg>
+                                Add to Calendar
                             </button>
                         </form>
                     </div>
@@ -146,7 +146,7 @@
 
                 <!-- Right Column: Revision Schedule & Calendar -->
                 <div class="lg:col-span-2 space-y-8">
-                     <!-- Today's Focus Section -->
+                      <!-- Today's Focus Section -->
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg">
                         <div class="flex justify-between items-center mb-2">
                             <h2 class="text-2xl font-semibold flex items-center gap-2 dark:text-white">
@@ -166,7 +166,7 @@
                         </div>
                     </div>
 
-                     <!-- Calendar Section -->
+                      <!-- Calendar Section -->
                     <div class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-lg">
                         <div id="calendar-header" class="flex items-center justify-between mb-4">
                             <button id="prev-month" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700">&lt;</button>
@@ -231,7 +231,7 @@
     <div id="reward-modal" class="fixed inset-0 bg-gray-600 bg-opacity-50 dark:bg-opacity-70 overflow-y-auto h-full w-full hidden z-50">
         <div class="relative top-1/4 mx-auto p-8 border w-full max-w-md shadow-lg rounded-xl bg-white dark:bg-gray-800 modal-content text-center">
              <div class="flex justify-center items-center">
-                 <img src="https://placehold.co/150x150/7c3aed/ffffff?text=🎉" alt="Trophy" class="rounded-full">
+                <img src="https://placehold.co/150x150/7c3aed/ffffff?text=🎉" alt="Trophy" class="rounded-full">
             </div>
             <h3 id="reward-title" class="text-2xl leading-6 font-bold text-gray-900 dark:text-white mt-4"></h3>
             <p id="reward-text" class="text-md text-gray-600 dark:text-gray-300 mt-2"></p>
@@ -317,8 +317,8 @@
     
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
     
-    <!-- Backendless SDK -->
-   <script src="//api.backendless.com/sdk/js/latest/backendless.js"></script>
+    <!-- Supabase SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js" defer></script>
 
 </body>
