--- a/index.html
+++ b/index.html
@@ -9,88 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <style>
-        html { scroll-behavior: smooth; }
-        body { font-family: 'Inter', sans-serif; }
-        .custom-checkbox:checked {
-            background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
-            background-color: #4f46e5;
-            border-color: #4f46e5;
-        }
-        .calendar-grid {
-            display: grid;
-            grid-template-columns: repeat(7, minmax(0, 1fr));
-            gap: 0.25rem;
-        }
-        .calendar-day {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 2.5rem;
-            width: 2.5rem;
-            font-size: 0.875rem;
-            border-radius: 9999px;
-            cursor: pointer;
-            transition: background-color 0.2s, color 0.2s;
-        }
-        .calendar-day.has-revision {
-            background-color: #e0e7ff; /* indigo-100 */
-            color: #3730a3; /* indigo-800 */
-        }
-        .dark .calendar-day.has-revision {
-            background-color: rgba(67, 56, 202, 0.3);
-            color: #a5b4fc; /* indigo-300 */
-        }
-        .calendar-day.is-today {
-            box-shadow: 0 0 0 2px #4f46e5; /* ring-2 ring-indigo-500 */
-            font-weight: 700;
-        }
-        .calendar-day.is-selected {
-            background-color: #4f46e5; /* bg-indigo-600 */
-            color: white;
-            font-weight: 700;
-        }
-        .loading-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 100;
-            transition: opacity 0.2s;
-        }
-        .loader {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #4f46e5;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-        .notes-content {
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6; /* gray-100 */
-            padding: 1rem;
-            border-radius: 0.5rem;
-            min-height: 120px;
-        }
-        .dark .notes-content {
-             background-color: #374151; /* gray-700 */
-        }
-        .progress-bar {
-            transition: width 0.5s ease-in-out;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script>
         // Set theme on initial load
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -290,13 +209,20 @@
                             <div id="difficulty-counts" class="text-sm text-gray-600 dark:text-gray-400 flex gap-3">
                                 <!-- Counts will be injected here -->
                             </div>
-                            <select id="all-questions-difficulty-filter" class="block w-full sm:w-48 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm dark:bg-gray-700 dark:border-gray-600 dark:text-white">
-                                <option value="">All Difficulties</option>
-                                <option>Easy</option>
-                                <option>Medium</option>
-                                <option>Hard</option>
-                            </select>
                         </div>
+                    </div>
+                    <!-- NEW: Filters for All Questions Section -->
+                    <div class="flex flex-col sm:flex-row gap-4 mb-6">
+                        <input type="search" id="all-questions-search-filter" placeholder="Search all questions..." class="flex-grow block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white">
+                        <select id="all-questions-topic-filter" class="block w-full sm:w-48 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+                            <option value="">All Topics</option>
+                        </select>
+                        <select id="all-questions-difficulty-filter" class="block w-full sm:w-48 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+                            <option value="">All Difficulties</option>
+                            <option>Easy</option>
+                            <option>Medium</option>
+                            <option>Hard</option>
+                        </select>
                     </div>
                     <div id="all-questions-list" class="space-y-4 max-h-[60vh] overflow-y-auto pr-2">
                         <!-- All unique questions will be injected here -->
@@ -399,10 +325,12 @@
         </div>
     </div>
     
-    <!-- Loading Modal (Copied from previous version) -->
+    <!-- Loading Modal -->
     <div id="loading-modal" class="loading-overlay hidden">
         <div class="loader"></div>
     </div>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
 
